--- a/index.html
+++ b/index.html
@@ -3,10 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="/css/initialize.css" rel="stylesheet"/>
+    <link href="/css/mercury.css" rel="stylesheet"/>
+
     <title>Pocket FM Design</title>
 </head>
-<body>
-    
+<body >
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha256-4+XzXVhsDmqanXGHaHvgh1gMQKX40OUvDEBTu8JcmNs=" crossorigin="anonymous"></script>
+    <div class="button">
+        <a class="primary-crimson-button" href="#"> DOWNLOAD NOW</spin></a>
+        <a class="primary-crimson-button" href="#"> DOWNLOAD NOW<spin class="spinner"></spin></a>
+        <a class="secondary-crimson-button" href="#"> DOWNLOAD NOW</spin></a>
+
+        <a class="tertiary-crimson-button" href="#"> DOWNLOAD NOW</spin></a>
+
+        <a class="alt-button" href="#"> DOWNLOAD NOW</spin></a>
+
+        <a class="disabled-button" href="#"> DOWNLOAD NOW</spin></a>
+    </div>
+    
 </body>
 </html>
