--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="/css/initialize.css" rel="stylesheet"/>
-    <link href="/css/mercury.css" rel="stylesheet"/>
+    <link href="/pocketfmdesign/css/initialize.css" rel="stylesheet"/>
+    <link href="/pocketfmdesign//css/mercury.css" rel="stylesheet"/>
 
     <title>Pocket FM Design</title>
 </head>
